# OS-FileManager

./: .gitignore  CMakeLists.txt  README.md  app.py  backup.py  filesystem  origin.py  st.md  temp  temp.py  test
api/: api.py
config/: config.json
gui/: about.py  converter.cpp  editor.py  explorer.py  filedata.py  gui.py  highlighter.py  home.py  temp.py  terminal.py  trie.py
src/: CommandLineInterface.cpp  CommandLineInterface.h  Constraints.h  DiskDriver.cpp  DiskDriver.h  DiskManager.cpp  DiskManager.h  FileManagerSystem.cpp  FileManagerSystem.h  FileSystemCore.cpp  FileSystemCore.h  Shell.cpp  Shell.h  Tools.h  UserInterface.cpp  UserInterface.h  main.cpp
src/entity/: Directory.h  FileIndex.h  FileManagerSystemInfo.h  FileSystemCoreInfo.h  FreeBlockStack.cpp  FreeBlockStack.h  INode.h  User.h  Vim.cpp  Vim.h
src/include/: Constraints.h  Data.h
src/model/: FreeBlockStack.h  Vim.cpp
